--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: all .2s linear;
 }
 main{
     display: flex;
